--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,5 @@
 MONGO_URL=YOUR-MONGO_URL-HERE
 JWT_SECRET = YOUR-SECRET-KEY
-JWT_ALGORITHM = HS256
+JWT_ALGORITHM = YOUR-ALGORITHM
+COOKIE_NAME = YOUR-COOKIE-NAME
+SECURE = False # Change to True if prod, False if testing.
