--- a/sample.env
+++ b/sample.env
@@ -2,4 +2,4 @@ MONGO_URL=YOUR-MONGO_URL-HERE
 JWT_SECRET = YOUR-SECRET-KEY
 JWT_ALGORITHM = YOUR-ALGORITHM
 COOKIE_NAME = YOUR-COOKIE-NAME
-SECURE = False # Change to True if prod, False if testing.
+COOKIE_SECURE = False # Change to True if prod, False if testing.
