add ioc-access-token on sample.env

--- a/sample.env
+++ b/sample.env
@@ -3,3 +3,4 @@ JWT_SECRET = YOUR-SECRET-KEY
 JWT_ALGORITHM = YOUR-ALGORITHM
 COOKIE_NAME = YOUR-COOKIE-NAME
 COOKIE_SECURE = False # Change to True if prod, False if testing.
+IOC_ACCESS_TOKEN = IOC_ACCESS_TOKEN-HERE
