Extract Method and externalize

--- a/sample.env
+++ b/sample.env
@@ -2,3 +2,5 @@ MONGO_URL=YOUR-MONGO_URL-HERE
 JWT_SECRET = YOUR-SECRET-KEY
 JWT_ALGORITHM = YOUR-ALGORITHM
 IOC_ACCESS_TOKEN = IOC_ACCESS_TOKEN-HERE
+TEST_URL = https://referite-6538ffaf77b0.herokuapp.com/ # use http://127.0.0.1:8000 for local
+AUDIENCE_TOKEN = AUDIENCE_TOKEN-HERE
