--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,4 +44,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with unittest
       run: |
-        python -m unittest tests/test_*.py
+        echo $MONGO_URL || python -m unittest tests/test_*.py
