--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,6 +23,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Create .env file
+      uses: SpicyPizza/create-envfile@v1.3.0
+      with:
+        envkey_MONGO_URL: ${{ secrets.MONGO_URL }}
+        envkey_JWT_SECRET: ${{ secrets.JWT_SECRET }}
+        envkey_JWT_ALGORITHM: ${{ secrets.JWT_ALGORITHM }}
+        envkey_IOC_ACCESS_TOKEN: ${{ secrets.IOC_ACCESS_TOKEN }}
+        envkey_TEST_URL: ${{ secrets.TEST_URL }}
+        envkey_AUDIENCE_TOKEN: ${{ secrets.AUDIENCE_TOKEN }}
+      
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
