--- a/sample.env
+++ b/sample.env
@@ -3,3 +3,4 @@ JWT_SECRET = YOUR-SECRET-KEY
 JWT_ALGORITHM = YOUR-ALGORITHM
 IOC_ACCESS_TOKEN = IOC_ACCESS_TOKEN-HERE
 AUDIENCE_TOKEN = AUDIENCE_TOKEN-HERE
+DEV_TOKEN = DEV_TOKEN-HERE
